syntax = "proto3";

package model;

option java_package = "org.oppia.app.model";
option java_multiple_files = true;

// Corresponds to a textual value that can be translated or spoken.
message SubtitledUnicode {
  // Textual value which will be shown to the user and/or spoken.
  string unicode_str = 1;
  // Content ID associating the text with translations or voiceovers.
  string content_id = 2;
}
